--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Filament中文网</title>
+	<link rel="stylesheet" href="./jscss/style.css">
+	<script src="./jscss/scale.fix.js"></script>
+</head>
+
 <body><div class="wrapper">
 	<header>
 		<h1><a href="https://jerkwin.github.io/filamentcn/">Filament中文网</a></h1>
@@ -10,6 +19,8 @@
 		<a href="#示例">示例</a><small> 贴图, 材质, 动态</small></p>
 		<p><img src="./jscss/二维码.png" alt=""></p>
 	</header>
+
+	<section>
 
 <h2 id="缘起">缘起</h2>
 
@@ -33,7 +44,7 @@
 <ul class="incremental">
 <li><a href="">下载构建</a></li>
 <li><a href="Filament.md.html">材质设计</a> <a href="https://google.github.io/filament/Filament.md.html">(原始文档)</a></li>
-<li><a href="filamentcn//Materials.md.html">材质概览</a> <a href="https://google.github.io/filament/Materials.md.html">(原始文档)</a></li>
+<li><a href="Materials.md.html">材质概览</a> <a href="https://google.github.io/filament/Materials.md.html">(原始文档)</a></li>
 <li><a href="Material_Properties.pdf">材质参考页</a>
 </li>
 </ul>
@@ -59,5 +70,11 @@
 <li><a href="">Blender猴头</a></li>
 <li><a href="">基本纽结</a></li>
 </ul>
+
+	</section>
+
+	<footer>
+		<p>本<a href="https://github.com/Jerkwin/filamentcn"> GitHub项目 </a>由<a href="https://github.com/Jerkwin"> Jerkwin </a>维护</p>
+	</footer>
 
 </div></body>
