--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Filament中文网</title>
+	<title>gmxtool</title>
 	<link rel="stylesheet" href="./jscss/style.css">
 	<script src="./jscss/scale.fix.js"></script>
 </head>
