--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <h2 id="Tools">Tools</h2></p>
 
 <ul class="incremental">
-<li><a href="">gmxtop</a></li>
-<li><a href="">gmxmmpbsa</a></li>
-<li><a href="">FitMol</a></li>
+<li><code>gmxtop</code></li>
+<li><code>gmx_mmpbsa</code></li>
+<li><code>fitmol</code> <a href="./fitmol/FitMol.f90">code</a> <a href="./fitmol/README.md">README</a></li>
 </li>
 </ul>
 
