--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <ul class="incremental">
 <li><code>gmxtop</code></li>
 <li><code>gmx_mmpbsa</code></li>
-<li><code>fitmol</code> <a href="./fitmol/FitMol.f90">code</a> <a href="./fitmol/README.md">README</a></li>
+<li><code>fitmol</code>　　<a href="./fitmol/README.md.html">README</a>　　<a href="./fitmol/FitMol.f90">CODE</a></li>
 </li>
 </ul>
 
