--- a/fitmol/README.md.html
+++ b/fitmol/README.md.html
@@ -1,6 +1,9 @@
+<meta charset="utf-8">
+<style>img { max-width: 100%; }</style>
+
 # README
 
-- by Ryan
+- Thanks to Ryan
 
 This FitMol Fortran program is designed to perform a rotation on a molecule such that it minimizes the RMSD of its coordinates with respect to a __reference__ molecule.
 
@@ -121,3 +124,10 @@ For non-interactive execution, the center of rotation can be defined with a seco
 1. maximum number of atoms is fixed to 2000. Using allocatable array.
 2. all molecules should have the same numner of atoms.
 3. fitting and RMSD calculation use different set of atoms.
+
+<style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace; font-size:5px;}</style>
+<!--link rel="stylesheet" href="./markdeep/latex.css?"-->
+
+<script src="../markdeep.js"></script><!--script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script-->
+
+<!--script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script-->
