--- a/fitmol/README.md.html
+++ b/fitmol/README.md.html
@@ -1,9 +1,9 @@
 <meta charset="utf-8">
 <style>img { max-width: 100%; }</style>
 
-# Introduction
+- Thanks to [Timothy Ryan Rogers](https://github.com/tryanrogers1)
 
-- Thanks to Timothy Ryan Rogers
+# Introduction
 
 This FitMol Fortran program is designed to perform a rotation on a molecule such that it minimizes the RMSD of its coordinates with respect to a __reference__ molecule.
 
