--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
 
 </table>
 
+<h2 id="Questions">Questions?</h2></p>
+
+If you have any quesiotns about these tools, please let me know.
+
+<ul>
+<li><a href="https://groups.google.com/forum/#!forum/gmxtool">Google Forum</a></li>
+<li><a href="https://github.com/Jerkwin/gmxtool/issues">GitHub issues</a></li>
+</ul>
+
 	</section>
 
 	<footer>
