--- a/fitmol/README.md.html
+++ b/fitmol/README.md.html
@@ -122,8 +122,8 @@ For non-interactive execution, the center of rotation can be defined with a seco
 ## TODO
 
 1. maximum number of atoms is fixed to 2000. Using allocatable array.
-2. all molecules should have the same numner of atoms.
-3. fitting and RMSD calculation use different set of atoms.
+2. <del>all molecules should have the same numner of atoms.</del>
+3. <del>fitting and RMSD calculation use different set of atoms.</del>
 
 <style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace; font-size:5px;}</style>
 <!--link rel="stylesheet" href="./markdeep/latex.css?"-->
