--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 <td>fitmol</td>
 <td><a href="./fitmol/README.md.html">README</a></td>
 <td><a href="./fitmol/FitMol.f90">FitMol.f90</a></td>
-<td><a href="./fitmol/ch4.xyz">ch4.xyz</a></td>
+<td><a href="./fitmol/ch4.xyz">ch4.xyz</a><br>
+<a href="./fitmol/ch4_ch3oh.xyz">ch4_ch3oh.xyz</a>
+</td>
 </tr>
 
 </table>
