--- a/model/graphene.html
+++ b/model/graphene.html
@@ -80,7 +80,7 @@ Y方向 <input type="box" id="cycY" value="1" style="width:30px;"/>&nbsp;&nbsp;&
 </td></tr>
 
 <tr><td colspan=2>
-XZ 方向卷曲参数方程(t, pi, tau, tmax, xbox)：&nbsp;扭曲 <input type="box" id="vF"  style="width:40%" value=''><br>
+XZ 方向卷曲参数方程(t, pi, tau, xbox, tbox)：&nbsp;扭曲 <input type="box" id="vF"  style="width:40%" value=''><br>
 
 X方向 <input type="box" id="Fx"  style="width:40%" value=''>
  切线 <input type="box" id="dFx" style="width:40%" value=''><br>
@@ -157,23 +157,11 @@ function mathFunction(str) {
 
 function genCoor() {
 
-	if(trim($('Fx').value).length>0 && trim($('Fz').value).length>0) {
-		isFt=true
-		Ft = new Function('t', 'r',
-		'r[0]='+mathFunction(trim($('Fx').value))+';'
-		+'r[1]=0;'
-		+'r[2]='+mathFunction(trim($('Fz').value))+';')
-	}
-
-	if(trim($('vF').value).length>0
+	if(trim($('Fx').value).length>0 && trim($('Fz').value).length>0) isFt=true
+	if(isFt
+	&& trim($('vF').value).length>0
 	&& trim($('dFx').value).length>0
-	&& trim($('dFz').value).length>0) {
-		isdFt=true
-		dFt = new Function('t', 'r',
-		'r[0]='+mathFunction(trim($('dFx').value))+';'
-		+'r[1]=0;'
-		+'r[2]='+mathFunction(trim($('dFz').value))+';')
-	}
+	&& trim($('dFz').value).length>0) isdFt=true
 
 	var i, j, k, X0, Y0,
 		M=parseInt($("wid").value), N=parseInt($("hig").value),
@@ -348,15 +336,26 @@ function genCoor() {
 	}
 
 	if(isFt) {
-		var eps=1E-3, tmax, s=0, r=[], V=[]
-		for(tmax=0; s<=Xbox; tmax+=.5) s += sarc(tmax, tmax+0.5, eps)
-		tmax=tarc(Xbox, 0, 0, tmax, eps)
+		Ft = new Function('t', 'r',
+		'r[0]='+mathFunction(trim($('Fx').value))+';'
+		+'r[1]=0;'
+		+'r[2]='+mathFunction(trim($('Fz').value))+';')
 
-		if(isdFt) vFt = new Function('t', 'tht',
-			'return '+mathFunction(trim($('vF').value)).replace('tmax', tmax) )
+		var eps=1E-3, tbox, s=0, r=[], V=[]
+		for(tbox=0; s<=Xbox; tbox+=.5) s += sarc(tbox, tbox+0.5, eps)
+		tbox=tarc(Xbox, 0, 0, tbox, eps)
+
+		if(isdFt) {
+			dFt = new Function('t', 'r',
+			'r[0]='+mathFunction(trim($('dFx').value))+';'
+			+'r[1]=0;'
+			+'r[2]='+mathFunction(trim($('dFz').value))+';')
+			vFt = new Function('t', 'tht',
+				'return '+mathFunction(trim($('vF').value)).replace('tbox', tbox) )
+		}
 
 		for(i=1; i<=Natm; i++) {
-			t=tarc(Xatm[i], 0, 0, tmax, eps)
+			t=tarc(Xatm[i], 0, 0, tbox, eps)
 			Ft(t, r)
 			Xatm[i]=r[0]
 			Zatm[i]=r[2]
@@ -903,7 +902,7 @@ function RotVect(RotMat, V, x0, y0, z0) {
 function AxiRotMat(tht, x, y, z) {
 	var r=x*x+y*y+z*z; if(r>0 && r!=1) { r=1/Math.sqrt(r); x*=r; y*=r; z*=r }
 
-	tht *= d2r
+	//tht *= d2r
 	r=Math.sin(tht/2); w=Math.cos(tht/2); x*=r; y*=r; z*=r
 	RotMat[1][1]= 1-2*(y*y+z*z); RotMat[1][2]=   2*(x*y-w*z); RotMat[1][3]=   2*(x*z+w*y);
 	RotMat[2][1]=   2*(x*y+w*z); RotMat[2][2]= 1-2*(x*x+z*z); RotMat[2][3]=   2*(y*z-w*x);
