--- a/calc/calc.html
+++ b/calc/calc.html
@@ -352,6 +352,12 @@ table tr th {
 
 		<table id="TabVDW">
 		<tr>
+		<td colspan="5">$U_{LJ}(r) = {C_{12} \over r^{12}} - {C_6 \over r^6} ={A \over r^{12}} - {C \over r^6} 
+		=4ε\left[\left( {σ\over r}\right)^{12}-\left({σ\over r}\right)^6\right]
+		=ε\left[\left( {R_e\over r}\right)^{12}-2\left({R_e\over r}\right)^6\right]
+		=D_0\left[\left( {R_0\over r}\right)^{12}-2\left({R_0\over r}\right)^6\right]$</td>
+		</tr>
+		<tr>
 		<td>原子 1</td><td>
 			<input type="box" name="VDW" onInput="setVDW(this.name,this.id)" id="V_sgm1" value='1'><br>
 			<input type="box" name="VDW" onInput="setVDW(this.name,this.id)" id="V_eps1" value='1'><br>
@@ -1417,296 +1423,6 @@ function showFit() {
 	updData(datChart, 1, data[1]);
 }
 
-function lmOpt() {
-	var i, stop
-
-
-	//console.log(f.toString(), df.toString())
-
-	//x=[0.25, 0.5, 1, 1.5, 2, 3, 4, 6, 8];
-	//y=[19.21, 18.15, 15.36, 14.10, 12.89, 9.32, 7.45, 5.24, 3.01];
-
-	//console.log(minQ)
-	showFit()
-	maxIter=parseInt($('maxIter').value)
-	updJ=true
-	tau=1e-3
-	tolg=1e-4
-	tolx=1e-8
-	nu=2
-
-	var J=[], Jt=[], H=[], p=[], ptmp=[], rtmp=[]
-	for(i=0; i<ndat; i++) { J[i]=[]; Jt[i]=[]; H[i]=[] }
-
-	minQ=.5*math.dot(res, res)
-	for(i=0; i<maxIter; i++) data[2][i]={}
-
-	stop=false
-	for(let iter=0; iter<maxIter; iter++) {
-	setTimeout(function() {
-		if(stop) return
-
-		//console.log(iter)
-		data[2][iter]={x:iter, y:minQ}
-		updData(datChart, 1, data[1]);
-		updData(fitChart, 0, data[2]);
-
-		for(i=0; i<np;   i++) p[i]=parseFloat($('pf__'+i).value)
-
-		if(updJ) {
-			for(i=0; i<np;   i++) scope[py[i]]=p[i]
-			for(i=0; i<ndat; i++) {
-				for(j=0; j<npxy; j++) if(!j==iy) scope[pxy[j]]=xy[pxy[j]][i]
-				for(j=0; j<np;   j++) J[i][j]=dy[j].evaluate(scope)
-			}
-
-			Jt=math.transpose(J)
-			H=math.multiply(Jt, J)
-
-			g=math.multiply(Jt, res)
-			if(iter==0) mu=tau*math.max(math.diag(H))
-
-			//console.log('mu', mu)
-			//console.log('g', g, math.max(math.abs(g))<=tolg)
-			//console.log('H', H)
-		}
-
-		dP=math.add(H, math.multiply(mu, math.identity(np)))
-		dP=math.inv(dP)
-		dP=math.multiply(-1, math.multiply(g, dP))
-		//console.log('h', dP)
-
-		if(math.max(math.abs(g))<=tolg) stop=true
-
-		if(math.sqrt(math.dot(dP,dP))<=tolx*(tolx+math.sqrt(math.dot(p,p)))) return
-
-		for(i=0; i<np; i++) {
-			ptmp[i] = p[i]+parseFloat(dP.subset(math.index(i)))
-			scope[py[i]]=ptmp[i]
-		}
-		for(i=0; i<ndat; i++) {
-			for(j=0; j<npxy; j++) if(!j==iy) scope[pxy[j]]=xy[pxy[j]][i]
-			yfit[i]=y.evaluate(scope)
-			rtmp[i]=yfit[i]-xy[pxy[iy]][i]
-			data[1][i]={x:xy[pxy[ix]][i], y:yfit[i]}
-		}
-
-		dL=math.subtract(math.multiply(mu, dP), g)
-		dL=0.5*math.multiply(math.transpose(dP), dL)
-  //console.log('dL', dL)
-
-  //console.log('rn', rtmp)
-
-		Q=.5*math.dot(rtmp, rtmp)
-		dF=minQ-Q
-  //console.log('dF', dF)
-
-		if(dL > 0 && dF > 0) {
-			minQ=Q
-			updJ=true
-			for(i=0; i<np; i++) $('pf__'+i).value=ptmp[i]
-			for(i=0; i<ndat; i++) res[i]=rtmp[i]
-
-			mu *= math.max(1./3, 1-(2*dF/dL-1)**3)
-			nu = 2;
-		} else { //                                 % Same  x, increase  mu
-			updJ=false
-			mu *= nu;  nu *= 2;
-		}
-	//console.log('>>>>', iter, dF, dL, mu, nu, p)
-	//if(Q<minQ) {
-	//	updJ=true
-	//	minQ=Q
-	//	lambda *= 0.1
-	//	for(i=0; i<np; i++) p[i]=ptmp[i]
-	//	for(i=0; i<ndat; i++) r[i]=rtmp[i]
-	//} else {
-	//	updJ=false
-	//	lambda *= 10.
-	//}
-	//iter++
-	}, 500)
-	}
-}
-
-function f(x) {
-	var i, j
-	y=trim($('y').value.replace(/^.*=/,''))
-	for(i=0; i<np; i++) dy[i]=math.derivative(y, py[i]).compile()
-
-	y=math.compile(y)
-
-	for(i=0; i<np;   i++) scope[py[i]]=x[i] //parseFloat($('pf__'+i).value)
-	for(i=0; i<ndat; i++) {
-		for(j=0; j<npxy; j++) if(!j==iy) scope[pxy[j]]=xy[pxy[j]][i]
-		yfit[i]=y.evaluate(scope)
-		res[i]=yfit[i]-xy[pxy[iy]][i]
-		data[1][i]={x:xy[pxy[ix]][i], y:yfit[i]}
-	}
-	updData(datChart, 1, data[1]);
-
-	return .5*math.dot(res, res)
-}
-
-/** minimizes a function using the downhill simplex method */
-function nmOpt() {
-	showFit()
-
-	var parameters = parameters || {};
-	var x0=[]
-	for(let i=0; i<np; i++) x0[i]=parseFloat($('pf__'+i).value)
-
-	var maxIterations = parameters.maxIterations || x0.length * 200,
-		nonZeroDelta = parameters.nonZeroDelta || 1.05,
-		zeroDelta = parameters.zeroDelta || 0.001,
-		minErrorDelta = parameters.minErrorDelta || 1e-6,
-		minTolerance = parameters.minErrorDelta || 1e-5,
-		rho = (parameters.rho !== undefined) ? parameters.rho : 1,
-		chi = (parameters.chi !== undefined) ? parameters.chi : 2,
-		psi = (parameters.psi !== undefined) ? parameters.psi : -0.5,
-		sigma = (parameters.sigma !== undefined) ? parameters.sigma : 0.5,
-		maxDiff;
-
-	maxIterations=parseInt($('maxIter').value)
-
-	// initialize simplex.
-	var N = x0.length,
-		simplex = new Array(N + 1);
-	simplex[0] = x0;
-	simplex[0].fx = f(x0);
-	simplex[0].id = 0;
-	for (var i = 0; i < N; ++i) {
-		var point = x0.slice();
-		point[i] = point[i] ? point[i] * nonZeroDelta : zeroDelta;
-		simplex[i+1] = point;
-		simplex[i+1].fx = f(point);
-		simplex[i+1].id = i+1;
-	}
-
-	function updateSimplex(value) {
-		for (var i = 0; i < value.length; i++) {
-			simplex[N][i] = value[i];
-		}
-		simplex[N].fx = value.fx;
-	}
-
-	var sortOrder = function(a, b) { return a.fx - b.fx; };
-
-	var centroid = x0.slice(),
-		reflected = x0.slice(),
-		contracted = x0.slice(),
-		expanded = x0.slice();
-
-	var stop=false
-	for (var iteration = 0; iteration < maxIterations; ++iteration) {
-	setTimeout(function() {
-		if(stop) return
-
-		simplex.sort(sortOrder);
-
-		for(let i=0; i<np; i++) $('pf__'+i).value=simplex[0][i]
-		//console.log(iteration, simplex[0])
-
-		if (parameters.history) {
-			// copy the simplex (since later iterations will mutate) and
-			// sort it to have a consistent order between iterations
-			var sortedSimplex = simplex.map(function (x) {
-				var state = x.slice();
-				state.fx = x.fx;
-				state.id = x.id;
-				return state;
-			});
-			sortedSimplex.sort(function(a,b) { return a.id - b.id; });
-
-			parameters.history.push({x: simplex[0].slice(),
-									 fx: simplex[0].fx,
-									 simplex: sortedSimplex});
-		}
-
-		maxDiff = 0;
-		for (i = 0; i < N; ++i) {
-			maxDiff = Math.max(maxDiff, Math.abs(simplex[0][i] - simplex[1][i]));
-		}
-
-		if ((Math.abs(simplex[0].fx - simplex[N].fx) < minErrorDelta) &&
-			(maxDiff < minTolerance)) {
-			stop=true
-			//break;
-		}
-
-		// compute the centroid of all but the worst point in the simplex
-		for (i = 0; i < N; ++i) {
-			centroid[i] = 0;
-			for (var j = 0; j < N; ++j) {
-				centroid[i] += simplex[j][i];
-			}
-			centroid[i] /= N;
-		}
-
-		// reflect the worst point past the centroid  and compute loss at reflected
-		// point
-		var worst = simplex[N];
-		weightedSum(reflected, 1+rho, centroid, -rho, worst);
-		reflected.fx = f(reflected);
-
-		// if the reflected point is the best seen, then possibly expand
-		if (reflected.fx < simplex[0].fx) {
-			weightedSum(expanded, 1+chi, centroid, -chi, worst);
-			expanded.fx = f(expanded);
-			if (expanded.fx < reflected.fx) {
-				updateSimplex(expanded);
-			}  else {
-				updateSimplex(reflected);
-			}
-		}
-
-		// if the reflected point is worse than the second worst, we need to
-		// contract
-		else if (reflected.fx >= simplex[N-1].fx) {
-			var shouldReduce = false;
-
-			if (reflected.fx > worst.fx) {
-				// do an inside contraction
-				weightedSum(contracted, 1+psi, centroid, -psi, worst);
-				contracted.fx = f(contracted);
-				if (contracted.fx < worst.fx) {
-					updateSimplex(contracted);
-				} else {
-					shouldReduce = true;
-				}
-			} else {
-				// do an outside contraction
-				weightedSum(contracted, 1-psi * rho, centroid, psi*rho, worst);
-				contracted.fx = f(contracted);
-				if (contracted.fx < reflected.fx) {
-					updateSimplex(contracted);
-				} else {
-					shouldReduce = true;
-				}
-			}
-
-			if (shouldReduce) {
-				// if we don't contract here, we're done
-				if (sigma >= 1) stop=true //break;
-
-				// do a reduction
-				for (i = 1; i < simplex.length; ++i) {
-					weightedSum(simplex[i], 1 - sigma, simplex[0], sigma, simplex[i]);
-					simplex[i].fx = f(simplex[i]);
-				}
-			}
-		} else {
-			updateSimplex(reflected);
-		}
-	}, 500)
-	}
-
-	//simplex.sort(sortOrder);
-
-	//console.log(simplex[0])
-	//return {fx : simplex[0].fx,
-	//		x : simplex[0]};
-}
 
 function dot(a, b) {
     var ret = 0;
