--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body><div class="wrapper">
 	<header>
-		<h1><a href="https://jerkwin.github.io/gmxtool/">gmxtools</a></h1>
+		<h1><a href="https://jerkwin.github.io/gmxtools/">gmxtools</a></h1>
 		<p>scripts/programs/utilities/tools for GROMACS</p>
 		<!--p class="view"><a href="#Introduction">Introduction</a></p>
 		<p class="view"><a href="#Tools">Tools</a></p-->
@@ -20,6 +20,7 @@
 <h2 id="Introduction">Introduction</h2>
 
 <p>This is a collection of the tools I used for GROMACS. Hope it helps for you as well.</p>
+<p>If you use one/some of the tools for your publication(s), I will appreciate if you cite the Zenodo DOI <a href="https://doi.org/10.5281/zenodo.6408973">10.5281/zenodo.6408973</a></p>
 
 <h2 id="Tools">Tools</h2></p>
 
@@ -126,8 +127,8 @@
 If you have any quesiotns about these tools, please let me know.
 
 <ul>
-<li><a href="https://groups.google.com/forum/#!forum/gmxtool">Google Forum</a></li>
-<li><a href="https://github.com/Jerkwin/gmxtool/issues">GitHub issues</a></li>
+<li><a href="https://groups.google.com/forum/#!forum/gmxtools">Google Forum</a></li>
+<li><a href="https://github.com/Jerkwin/gmxtools/issues">GitHub issues</a></li>
 </ul>
 
 	</section>
