--- a/xff/xff.html
+++ b/xff/xff.html
@@ -85,8 +85,8 @@ code {
 	</td>
 </tr>
 
-<tr><td colspan='3'><span class='th'>Scaling Factor&nbsp;</span> <input type="box" value="1" id="Kscale" style="width:20%"> used to scale the calculated force constants</td></tr>
-<tr><td colspan='3'><span class='th'>Selected Atoms&nbsp;</span> <input type="box" value="all" id="selatoms" style="width:20%"> 1-based index, <code>all</code>or<code>min:max:step</code>,<code>-</code>to invert</td></tr>
+<tr><td colspan='3'><span class='th'>Scaling Factor&nbsp;</span> <input type="box" value="1" id="Kscale" style='width:20%;font:bold 1em Consolas,"Courier New",Monaco;'> used to scale the calculated force constants</td></tr>
+<tr><td colspan='3'><span class='th'>Selected Atoms&nbsp;</span> <input type="box" value="all" id="selatoms" style='width:20%;font:bold 1em Consolas,"Courier New",Monaco;'> 1-based index, <code>all</code>or<code>min:max:step</code>,<code>-</code>to invert</td></tr>
 <tr><td colspan='3'><span class='th'>Diagonalization</span>
 <input type='radio' name='eigen' id='qr' checked>QR
 <input type='radio' name='eigen' id='jacobi'>Jacobi
