--- a/calc/gnuecharts.html
+++ b/calc/gnuecharts.html
@@ -3,7 +3,7 @@
 <style>
 body { font: 1em/1.5 Consolas}
 code {
-	font: bold 1em/1.2 Consolas, Monaco, monospace, SimHei;
+	font: bold .5em/1. Consolas, Monaco, monospace, SimHei;
 	overflow: auto;
 	background: #F5F2F0;
 	max-width: 100%;
@@ -13,63 +13,109 @@ code {
 	margin: 0 .3em 0 0.3em;
 }
 
-.th {
+table {
+	font: bold 1em/1.2 Consolas, "Courier New",  Monaco;
+	text-align:left;
+	vertical-align: baseline;
+	border: 2px solid #888;
+	border-spacing: 1;
+	border-collapse:collapse;
+	color:#000;
+	background-color:#ECE8CD;
+	max-width:100%;
+/*	word-break:break-all;
+	word-wrap:break-word;
+	display: block;
+*/
+	margin:auto;
+	overflow: auto;
+}
+th, .th {
 	color:#fff;
 	background-color: #A82918;
-	padding: 5px;
+	border: 2px solid #000;
+	padding: 3px;
 }
+
+td, tr {
+	border: 2px solid #AAA;
+	padding:2px;
+}
+table tr:nth-child(2n) { background-color: #FFFBDE; }
+tfoot {font: 1em/1.2 Consolas, "Courier New", Monaco;}
 
 .btn{
-  font: bold 1em/1.2 Consolas, Monaco;
-  width: 20%;
-  height: 2em;
-  color:#fff;background-color:#EF8C0E
+	font: bold 1em/1.2 Consolas, Monaco;
+	width: 20%;
+	height: 2em;
+	color:#fff;background-color:#EF8C0E
 }
+
+.modal{
+	display:none;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	overflow: auto;
+}
+
+.modal .container{
+	max-width: 100%;
+	height: 100%;
+	background-color: #fff;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	box-sizing: border-box;
+	border-radius: 6px;
+	padding: 1em;
+}
+
 </style>
 
-<div style='height:100%;width:100%;display:flex;justify-content:space-between;'>
+<div id='box' style='height:100%;width:100%;'>
+	<div id='container' style='height:100%;width:calc(80% - 5px);float:left;overflow:scroll'></div>
+	<div id='resize' style='width:5px; height:100%; background:skyblue; cursor: w-resize; float:left;'></div>
+	<div id='right' style='height:100%;width:20%;float:right;overflow:scroll;'>
+		<span class='th'>数据</span> 示例
+		<span class='btn' onclick='demo(1)'>1</span>
+		<span class='btn' onclick='demo(2)'>2</span>
+		<span class='btn' onclick='demo(3)'>3</span><br>
+		<textarea id='data' style='width: 95%; height:50%; margin: 0px;'></textarea><br>
 
-	<div id='container' style='height:100%; width:80%; flex:1;overflow:scroll'></div>
-	<div style='flex:0 0 20%;overflow:scroll;'>
-		<span class='th'>数据</span><br>
-		<textarea id='data' style='width: 90%; height:50%; margin: 0px;'>
-#测试数据
-#t   均匀随机数 正态随机数
- 0.0      0.307     -0.355
- 0.5      0.151     -0.856
- 1.0      0.263     -0.889
- 1.5      0.315     -0.021
- 2.0      0.478     -1.454
- 2.5      0.655      1.192
- 3.0      0.889     -0.474
- 3.5      0.331     -0.182
- 4.0      0.965     -0.512
- 4.5      0.302     -0.447
- 5.0      0.554      2.187
- 5.5      0.075     -1.225
- 6.0      0.576      0.577
- 6.5      0.920      1.232
- 7.0      0.573     -0.777
- 7.5      0.237     -0.204
- 8.0      0.131      0.304
- 8.5      0.616      0.960
- 9.0      0.042     -0.473
- 9.5      0.128     -0.780
-10.0      0.135      0.655
-		</textarea><br>
 		<span class='th'>绘图命令</span><br>
-		<textarea id='plot' style='width: 90%; height:10%; margin:0px; font: bold 1em Consolas'>
-1:2 O
-1:3 ~M
-[0:10] exp(sin(x)) ~
-			</textarea><br>
-		<input type='button' class='btn' value='更新绘图' onclick='update()' style='width:100px; height:30px'><br><br>
-		函数:<code>[初值:终值:步长] f(x) 线点型</code><br>
-		数据:<code>列号1:列号2 线点型</code><br>
-		线型:<code>-</code>折线 <code>~</code>平滑线 <code>--</code>虚线 <code>-.</code>点线<br>
-		点型:<code>O</code>圆点 <code>M</code>方块 <code>D</code>圆角方块 <code>A</code>三角 <code>V</code>菱形 <code>Q</code>大头针 <code>^</code>箭头
+		<textarea id='cmd' style='width: 95%; height:10%; margin:0px; font: bold 1em Consolas'></textarea><br>
+
+		<input type='button' class='btn' value='更新绘图' onclick='runCMD()' style='width:100px; height:30px'>
+		<input type='button' class='btn' value='优化结果' onclick='showLM()' style='width:100px; height:30px'><br><br>
+
+		<span class='th'>命令说明</span><br>
+		<li>数据:<code>x范围 y范围 x数据:y数据 点线型</code></li>
+		<li>函数:<code>fun x范围步长 f(x) 点线型</code></li>
+		<li>拟合:<code>fit $x范围 $y=f($x,P) 参数优化设置 点线型</code></li>
+		<li>优化:<code>min f(X) 或 {r1(X); r2(X)} 参数优化设置 点线型</code></li>
+		<hr>
+		<li>范围: <code>[最小值:最大值]</code></li>
+		<li>范围步长: <code>[最小值:最大值:步长]</code></li>
+		<li>参数设置: <code>X=初值 X==定值</code></li>
+		<li>优化设置: <code>maxit=优化步数 tau=初始步长 tolg=梯度容差 tolx=参数增比</code></li>
+		<li>线型:<code>-</code>折线 <code>~</code>平滑线 <code>--</code>虚线 <code>-.</code>点线</li>
+		<li>点型:<code>O</code>圆点 <code>M</code>方块 <code>D</code>圆角方块 <code>A</code>三角 <code>V</code>菱形 <code>Q</code>大头针 <code>^</code>箭头</li>
 	</div>
 </div>
+
+<div class="modal" id='LM'><div class="container">
+<table id="LMret" style="border-collapse: collapse;"></table>
+</div></div>
+
+<script src="https://jerkwin.github.io/gmxtools/calc/math.js"></script>
+<script src="https://unpkg.com/svd-js" type="application/javascript"></script>
 
 <script src='https://cdn.jsdelivr.net/npm/echarts@5.2.2/dist/echarts.min.js'></script>
 
@@ -91,6 +137,4 @@ code {
 <script src='https://cdn.jsdelivr.net/npm/echarts@{{version}}/dist/extension/bmap.min.js'></script>
 -->
 
-<script>
-"use strict";function update(){var i=void 0,j=void 0,k=void 0,ii=void 0,jj=void 0,row=void 0,col=void 0,txt=void 0,str=void 0,tips="数据";for(txt=trim($("data").value).split(/\n/),i=-1,"#"==trim(txt[0])[0]&&(i=0,"#"==trim(txt[1])[0]&&(i=1)),i>=0&&(1==i&&(tips=trim(txt[0].slice(1))),legend=trim(txt[i].slice(1)).split(/\s+/),txt=txt.slice(i+1)),row=txt.length,col=trim(txt[0]).split(/\s+/).length,i=0;i<row;i++)data[i]=[];var xy=[],xmin=1e99,xmax=-1e99,dx=1;for(i=0;i<row;i++){for(xy=trim(txt[i]).split(/\s+/),j=0;j<col;j++)data[i][j]=parseFloat(xy[j]);data[i][0]<xmin&&(xmin=data[i][0]),data[i][0]>xmax&&(xmax=data[i][0])}txt=trim($("plot").value).split(/\n/);var nser=txt.length,series=[],ptype=[],ltype=[],swid=[],xname="",yname="";var x=void 0,y=void 0,fx="",fy="";for(k=0;k<nser;k++)if(series[k]=[],str=trim(txt[k]),"["==str[0]){fx=str.replace(/^.* +/,""),ptype[k]=plotType(fx),ltype[k]=lineType(fx),smooth[k]=smline(fx),symbol[k]=stype(fx),swid[k]=sizewidth(fx),xname+="x"+(k<nser-1?"|":""),yname+="f(x)"+(k<nser-1?"|":""),fx=trim(str.replace(/.*]/,"").replace(/ *[^ ]+$/,"")),sname[k]=fx;var range=trim(str.replace(/].*/,"")).slice(1).split(/ *: */);for(range[0]&&1==range.length&&(xmax=parseFloat(range[0])),range[0]&&2==range.length&&(xmax=parseFloat(range[1]),xmin=parseFloat(range[0])),dx=(xmax-xmin)/10,range[0]&&3==range.length&&(xmax=parseFloat(range[1]),xmin=parseFloat(range[0]),dx=parseFloat(range[2])),fx=new Function("x","return "+mathFunction(fx)),x=xmin;x<=xmax;x+=dx)series[k].push([x,fx(x)])}else{str=str.split(/[\s|:]+/),i=-1,j=-1,fx="",fy="",-1==str[0].indexOf("$")?i=parseInt(str[0])-1:fx=trim(str[0]),-1==str[1].indexOf("$")?j=parseInt(str[1])-1:fy=trim(str[1]),ptype[k]=plotType(str[2]),ltype[k]=lineType(str[2]),smooth[k]=smline(str[2]),symbol[k]=stype(str[2]),swid[k]=sizewidth(str[2]),sname[k]=j>=0&&legend[j]?legend[j]:"y"+(k+1),str=k<nser-1?"|":"",xname+=(i>=0&&legend[i]?legend[i]:"x"+(k+1))+str,yname+=sname[k]+str;for(var _ii=0;_ii<row;_ii++)i>=0?x=data[_ii][i]:(x=fx.replace(/\$(\d+)/g,"data["+_ii+"][$1-1]"),x=eval(mathFunction(x))),j>=0?y=data[_ii][j]:(y=fy.replace(/\$(\d+)/g,"data["+_ii+"][$1-1]"),y=eval(mathFunction(y))),series[k].push([x,y])}for(option.title.text=tips,option.xAxis.name=xname,option.yAxis.name=yname,option.series=[],k=0;k<nser;k++)option.series[k]={},option.series[k].name=sname[k],option.series[k].type=ptype[k],option.series[k].data=[],option.series[k].data=series[k],option.series[k].smooth=smooth[k],option.series[k].symbol=symbol[k],option.series[k].showSymbol=!!symbol[k],option.series[k].lineStyle={},option.series[k].lineStyle.type=ltype[k],option.series[k].symbolSize=swid[k].split(/\s+/)[0],option.series[k].lineStyle.width=swid[k].split(/\s+/)[1];myChart.setOption(option,!0)}function smline(e){return-1!=e.indexOf("~")}function plotType(e){return-1!=e.indexOf("-")||-1!=e.indexOf("~")?"line":"scatter"}function lineType(e){return-1!=e.indexOf(".")?"dotted":-1!=e.indexOf("--")?"dashed":"solid"}function sizewidth(e){var t=void 0,i=void 0;return t=trim(e.replace(/^[~-]*\d*/,"").replace(/.*[A-Z^]+/,"")),i=trim(e.replace(/[A-Z^]+.*/,"").replace(/[^\d]+/,"")),t||(t=10),i||(i=2),t+" "+i}function stype(e){return-1!=e.indexOf("O")?"circle":-1!=e.indexOf("M")?"rect":-1!=e.indexOf("D")?"roundRect":-1!=e.indexOf("A")?"triangle":-1!=e.indexOf("V")?"diamond":-1!=e.indexOf("Q")?"pin":-1!=e.indexOf("^")?"arrow":""}function mathFunction(e){var t="pow sqrt exp log abs ceil floor min max round random sin cos tan asin acos atan atan2 toSource valueOf";t=t.split(/\s+/);for(var i=0,n=t.length;i<n;i++)e=e.replace(new RegExp(t[i]+"\\(","g"),"Math."+t[i]+"(");return e=e.replace(/pi/gi,"(Math.PI)").replace(/tau/gi,"(2*Math.PI)")}var $=function(e){return document.getElementById(e)},trim=function(e){return e.replace(/^\s*\n*/,"").replace(/\s*\n*$/,"")},myChart=echarts.init($("container")),data=[],legend=[],sname=[],smooth=[],symbol=[],ssymbol=[],xname,yname,option;option={title:{text:"数据",textStyle:{fontFamily:"Microsoft YaHei",fontSize:24}},legend:{textStyle:{fontWeight:"bolder",fontFamily:"Microsoft YaHei",fontSize:18}},xAxis:{type:"value",offset:0,name:"x轴",nameLocation:"center",nameGap:36,nameTextStyle:{fontWeight:"bolder",fontFamily:"Microsoft YaHei",fontSize:24},axisLabel:{margin:18,fontWeight:"bolder",fontFamily:"Microsoft YaHei",fontSize:18},axisLine:{lineStyle:{width:5}},axisTick:{length:15,lineStyle:{width:5}},minorTick:{show:!0,splitNumber:5,length:10,lineStyle:{width:5}},splitLine:{lineStyle:{type:"dashed"}}},yAxis:{type:"value",offset:0,name:"y轴",nameLocation:"center",nameGap:72,nameTextStyle:{fontWeight:"bolder",fontFamily:"Microsoft YaHei",fontSize:24},axisLabel:{margin:18,fontWeight:"bolder",fontFamily:"Microsoft YaHei",fontSize:18},axisLine:{lineStyle:{width:5}},axisTick:{length:15,lineStyle:{width:5}},minorTick:{show:!0,splitNumber:5,length:10,lineStyle:{width:5}},splitLine:{lineStyle:{type:"dashed"}}},series:[{name:"y",type:"scatter"}],grid:{containLabel:!0},tooltip:{trigger:"axis",axisPointer:{type:"cross"}},toolbox:{feature:{dataZoom:{yAxisIndex:"none"},restore:{},saveAsImage:{}}},dataZoom:[{type:"slider",xAxisIndex:[0],filterMode:"none"},{type:"slider",yAxisIndex:[0],filterMode:"none"},{type:"inside",xAxisIndex:[0]},{type:"inside",yAxisIndex:[0]}]},update();
-</script>
+<script src="https://jerkwin.github.io/gmxtools/calc/gnuecharts.min.js"></script>
