--- a/calc/gnuecharts.html
+++ b/calc/gnuecharts.html
@@ -107,6 +107,8 @@ tfoot {font: 1em/1.2 Consolas, "Courier New", Monaco;}
 		<li>优化设置: <code>maxit=优化步数 tau=初始步长 tolg=梯度容差 tolx=参数增比</code></li>
 		<li>线型:<code>-</code>折线 <code>~</code>平滑线 <code>--</code>虚线 <code>-.</code>点线</li>
 		<li>点型:<code>O</code>圆点 <code>M</code>方块 <code>D</code>圆角方块 <code>A</code>三角 <code>V</code>菱形 <code>Q</code>大头针 <code>^</code>箭头</li>
+		<li>点型后数字指定点大小, 默认<code>10</code></li>
+		<li>线型后数字指定线宽度, 默认<code>2</code></li>
 	</div>
 </div>
 
