--- a/calc/gnuecharts.html
+++ b/calc/gnuecharts.html
@@ -96,10 +96,10 @@ tfoot {font: 1em/1.2 Consolas, "Courier New", Monaco;}
 		<input type='button' class='btn' value='优化结果' onclick='showLM()' style='width:100px; height:30px'><br><br>
 
 		<span class='th'>命令说明</span><br>
-		<li>数据:<code>x范围 y范围 x数据:y数据 点线型</code></li>
-		<li>函数:<code>fun x范围步长 f(x) 点线型</code></li>
-		<li>拟合:<code>fit $x范围 $y=f($x,P) 参数优化设置 点线型</code></li>
-		<li>优化:<code>min f(X) 或 {r1(X); r2(X)} 参数优化设置 点线型</code></li>
+		<li>数据:<code>x范围 y范围 x数据:y数据 @点线型</code></li>
+		<li>函数:<code>fun x范围步长 f(x) @点线型</code></li>
+		<li>拟合:<code>fit $x范围 $y=f($x,P) 参数优化设置 @点线型</code></li>
+		<li>优化:<code>min f(X) 或 {r1(X); r2(X)} 参数优化设置 @点线型</code></li>
 		<hr>
 		<li>范围: <code>[最小值:最大值]</code></li>
 		<li>范围步长: <code>[最小值:最大值:步长]</code></li>
